--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ mouse_position = "0.1.4"
 tauri-plugin-shell = "2"
 winreg = "0.52.0"
 regex = "1.11.1"
+uuid = { version = "1.0", features = ["v4"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
