--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "sass": "^1.83.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-router": "4"
@@ -68,16 +67,26 @@
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.0",
-    "eslint": "8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "9.19.2",
-    "husky": "^8.0.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "husky": "^9.1.4",
     "lint-staged": "^15.3.0",
     "postcss": "^8.4.49",
+    "postcss-html": "^1.7.0",
+    "postcss-scss": "^4.0.9",
+    "sass": "^1.77.8",
     "prettier": "3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
+    "stylelint": "^16.8.2",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.6.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.1",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
     "vite": "^6.0.3",
