--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,10 @@ tauri-plugin-shell = "2"
 winreg = "0.52.0"
 regex = "1.11.1"
 uuid = { version = "1.0", features = ["v4"] }
+chrono = "0.4"
+dirs = "5.0"
+tauri-plugin-dialog = "2"
+tauri-plugin-process = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
