--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ chrono = "0.4"
 dirs = "5.0"
 tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
+tauri-plugin-autostart = "2.0.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
