--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ dirs = "5.0"
 tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
 tauri-plugin-autostart = "2.0.0"
+rusqlite = { version = "0.32.1", features = ["backup"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
