--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,13 @@ tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
 tauri-plugin-autostart = "2.0.0"
 rusqlite = { version = "0.32.1", features = ["backup"] }
+windows = { version = "0.59", features = [
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Foundation",
+    "Win32_System_ProcessStatus",
+    "Win32_System_Threading",
+    "Win32_System_ProcessStatus"
+] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
