--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "pinyin-pro": "^3.26.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-router": "4"
