--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,7 @@ tauri-plugin-store = "2"
 log = "0.4"
 mouse_position = "0.1.4"
 tauri-plugin-shell = "2"
-winreg = "0.52.0"
+winreg = "0.55.0"
 regex = "1.11.1"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = "0.4"
@@ -45,6 +45,7 @@ windows = { version = "0.59", features = [
     "Win32_System_Threading",
     "Win32_System_ProcessStatus"
 ] }
+glob = "0.3.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
