--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tauri-apps/plugin-autostart": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-global-shortcut": "~2",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-opener": "^2",
@@ -59,7 +60,7 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "pinyin-pro": "^3.26.0",
+    "pinyin-match": "^1.2.6",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-router": "4"
