--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ windows = { version = "0.59", features = [
 ] }
 glob = "0.3.1"
 tauri-plugin-http = "2"
+base64 = "0.21"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
