--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snippets-code",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -62,6 +62,7 @@
     "@tauri-apps/plugin-store": "~2",
     "@uiw/codemirror-themes": "^4.23.7",
     "codemirror": "^6.0.1",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
