--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,9 +8,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "tauri_app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
@@ -32,7 +29,7 @@ tauri-plugin-shell = "2"
 winreg = "0.55.0"
 regex = "1.11.1"
 uuid = { version = "1.0", features = ["v4"] }
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
 tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
@@ -48,6 +45,7 @@ windows = { version = "0.59", features = [
 glob = "0.3.1"
 tauri-plugin-http = "2"
 base64 = "0.21"
+lazy_static = "1.4.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
