--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,17 +23,10 @@ tauri-plugin-notification = "2"
 tauri-plugin-log = "2"
 tauri-plugin-os = "2"
 tauri-plugin-store = "2"
-log = "0.4"
-mouse_position = "0.1.4"
-tauri-plugin-shell = "2"
-winreg = "0.55.0"
-regex = "1.11.1"
-uuid = { version = "1.0", features = ["v4"] }
-chrono = { version = "0.4", features = ["serde"] }
-dirs = "5.0"
 tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
 tauri-plugin-autostart = "2.0.0"
+tauri-plugin-http = "2"
 rusqlite = { version = "0.32.1", features = ["backup"] }
 windows = { version = "0.59", features = [
     "Win32_UI_WindowsAndMessaging",
@@ -42,10 +35,18 @@ windows = { version = "0.59", features = [
     "Win32_System_Threading",
     "Win32_System_ProcessStatus"
 ] }
+log = "0.4"
+mouse_position = "0.1.4"
+tauri-plugin-shell = "2"
+winreg = "0.55.0"
+regex = "1.11.1"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+dirs = "5.0"
 glob = "0.3.1"
-tauri-plugin-http = "2"
 base64 = "0.21"
 lazy_static = "1.4.0"
+urlencoding = "2.1.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
