--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snippets-code",
   "private": true,
-  "version": "0.2.8",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -60,6 +60,7 @@
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-sql": "^2.2.0",
     "@tauri-apps/plugin-store": "~2",
+    "@tauri-apps/plugin-updater": "~2.5.1",
     "@uiw/codemirror-themes": "^4.23.7",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.13",
