--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,11 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         
+      - name: Install WiX
+        run: |
+          dotnet tool install --global wix
+          wix --version
+        
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
