--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,10 +22,18 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'
+        
       - name: Install WiX
         run: |
-          dotnet tool install --global wix
-          wix --version
+          dotnet tool install --global wix --version 4.0.4
+          dotnet tool install --global wix.dll --version 4.0.4
+          
+      - name: Add WiX to PATH
+        run: echo "C:\Users\runneradmin\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         
       - name: Install pnpm
         uses: pnpm/action-setup@v2
@@ -47,6 +55,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_PRIVATE_KEY_PASSWORD }}
+          WIX_PATH: "C:\\Users\\runneradmin\\.dotnet\\tools"
         with:
           tagName: ${{ github.ref_name }}
           releaseName: "效率工具 v__VERSION__"
