--- a/.github/workflows/guide.yaml
+++ b/.github/workflows/guide.yaml
@@ -1,8 +1,8 @@
 name: github pages
 on:
   push:
-   branches:
-     - "master"
+    branches:
+      - 'master'
 
 jobs:
   deploy:
@@ -12,18 +12,18 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-        - name: Setup mdBook
-          uses: peaceiris/actions-mdbook@v1
-          with:
-            mdbook-version: 'latest'
-        - name: Build
-          run: |
-            cd guide
-            mdbook build
-        - name: Deploy
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./guide/book
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v1
+        with:
+          mdbook-version: 'latest'
+      - name: Build
+        run: |
+          cd guide
+          mdbook build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./guide/book
