--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-router": "4",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "@octokit/rest": "^19.0.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
