--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,10 @@ jobs:
           releaseBody: 'See the assets to download and install this version.'
           releaseDraft: false
           prerelease: false
+          includeUpdaterJson: false
+
+      - name: Wait for assets
+        run: sleep 15
 
       - name: Upload assets
         env:
