--- a/.stylelintignore
+++ b/.stylelintignore
@@ -6,8 +6,17 @@ public
 .idea
 *.sh
 *.md
-~
-myapp.*
+
+# 忽略所有以 ~ 结尾的文件和文件夹
+*~
+.~*
+~$*
+
+# 忽略密钥文件
+*.pem
+*.key
+*.key.pub
+
 src/assets
 src-tauri
 stats.html
