--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "@actions/github": "^6.0.0",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
@@ -49,6 +50,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.1",
     "@lezer/highlight": "^1.2.1",
+    "@octokit/rest": "^19.0.13",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-autostart": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2",
@@ -69,12 +71,9 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "pinyin-match": "^1.2.6",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
-    "vue-router": "4",
-    "@actions/github": "^6.0.0",
-    "@octokit/rest": "^19.0.13"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
