--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,9 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
-tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-opener = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-log = "2"
 tauri-plugin-os = "2"
@@ -27,17 +27,19 @@ tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
 tauri-plugin-autostart = "2.0.0"
 tauri-plugin-http = "2"
+tauri-plugin-shell = "2"
 rusqlite = { version = "0.32.1", features = ["backup"] }
 windows = { version = "0.59", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_Foundation",
     "Win32_System_ProcessStatus",
     "Win32_System_Threading",
-    "Win32_System_ProcessStatus"
+    "Win32_UI_Shell",
+    "Win32_System_Com",
+    "Win32_Graphics_Gdi"
 ] }
 log = "0.4"
 mouse_position = "0.1.4"
-tauri-plugin-shell = "2"
 winreg = "0.55.0"
 regex = "1.11.1"
 uuid = { version = "1.0", features = ["v4"] }
@@ -45,8 +47,16 @@ chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
 glob = "0.3.1"
 base64 = "0.21"
+url = "2.5.4"
 lazy_static = "1.4.0"
 urlencoding = "2.1.3"
+once_cell = "1.19.0"
+tokio = { version = "1.36.0", features = ["rt", "time"] }
+image = "0.24.7"
+png = "0.17.16"
+fuzzy-matcher = "0.3.7"
+pinyin = "0.10"
+xml-rs = "0.8.25"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
