--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,7 +36,8 @@ windows = { version = "0.59", features = [
     "Win32_System_Threading",
     "Win32_UI_Shell",
     "Win32_System_Com",
-    "Win32_Graphics_Gdi"
+    "Win32_Graphics_Gdi",
+    "Win32_Storage_FileSystem"
 ] }
 log = "0.4"
 mouse_position = "0.1.4"
