--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "snippets-code"
-version = "0.0.1"
-description = "programmer's Efficiency Tool"
+version = "0.2.0"
+description = "程序员效率助手，包含翻译、搜索、代码片段管理等功能"
 authors = ["GigaPuddings"]
 edition = "2021"
 
@@ -28,6 +28,7 @@ tauri-plugin-process = "2"
 tauri-plugin-autostart = "2.0.0"
 tauri-plugin-http = "2"
 tauri-plugin-shell = "2"
+reqwest = { version = "0.12", features = ["json"] }
 rusqlite = { version = "0.32.1", features = ["backup"] }
 windows = { version = "0.59", features = [
     "Win32_UI_WindowsAndMessaging",
@@ -58,6 +59,7 @@ png = "0.17.16"
 fuzzy-matcher = "0.3.7"
 pinyin = "0.10"
 xml-rs = "0.8.25"
+selection = "1.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
