--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,7 +38,10 @@ windows = { version = "0.59", features = [
     "Win32_UI_Shell",
     "Win32_System_Com",
     "Win32_Graphics_Gdi",
-    "Win32_Storage_FileSystem"
+    "Win32_Storage_FileSystem",
+    "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_System_DataExchange",
+    "Win32_System_Memory"
 ] }
 log = "0.4"
 mouse_position = "0.1.4"
@@ -60,6 +63,7 @@ fuzzy-matcher = "0.3.7"
 pinyin = "0.10"
 xml-rs = "0.8.25"
 selection = "1.2.0"
+tauri-plugin-clipboard-manager = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
