fix: 匹配GitHub Actions密钥配置

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,13 +126,11 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # 仅当有设置密钥时才使用密钥
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_PRIVATE_KEY_PASSWORD }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
-          # 允许无签名构建
-          args: --config tauri.conf.json
+          projectPath: "."
 
   updater:
     runs-on: ubuntu-latest
