--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,35 @@
 name: Release
 
+# 修改触发条件，只在创建标签时触发一次
 on:
-  push:
+  create:
     tags:
       - 'v*'
 
-# 添加并发控制，防止重复构建
+# 使用严格的并发控制
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: release-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+  # 添加检查步骤，确认是标签触发
+  check-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      is_tag: ${{ steps.check.outputs.is_tag }}
+    steps:
+      - id: check
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "is_tag=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_tag=false" >> $GITHUB_OUTPUT
+          fi
+
   create-release:
+    needs: check-tag
+    # 只有在是标签时才运行
+    if: needs.check-tag.outputs.is_tag == 'true'
     runs-on: windows-latest
     outputs:
       release_id: ${{ steps.create-release.outputs.result }}
@@ -84,7 +102,8 @@ jobs:
             return data.id
 
   build-tauri:
-    needs: create-release
+    needs: [check-tag, create-release]
+    if: needs.check-tag.outputs.is_tag == 'true'
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -139,32 +158,15 @@ jobs:
 
   updater:
     runs-on: ubuntu-latest
-    needs: build-tauri
+    needs: [check-tag, build-tauri]
+    if: needs.check-tag.outputs.is_tag == 'true'
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 18
-
-      - name: 安装pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-
-      - name: 安装依赖
-        run: pnpm install
-
-      - name: 运行更新器脚本
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: pnpm run updater
-
   publish-release:
     runs-on: ubuntu-latest
-    needs: updater
+    needs: [check-tag, updater]
+    if: needs.check-tag.outputs.is_tag == 'true'
     steps:
       - name: 发布发布
         uses: actions/github-script@v6
