--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@icon-park/vue-next": "^1.4.2",
-    "@tauri-apps/cli": "2.0.0-rc.18",
+    "@tauri-apps/cli": "^2",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
