--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
-        "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@tauri/*": ["src-tauri/*"]
     },
     "allowSyntheticDefaultImports": true,
 
