--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
