--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint:lint-staged": "lint-staged",
     "commit": "git-cz",
     "updater": "node scripts/updater.mjs",
+    "upload-assets": "node scripts/upload-assets.mjs",
+    "rename-installer": "node scripts/rename-installer.mjs",
     "tag": "node scripts/tag.mjs"
   },
   "config": {
