--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "updater": "node scripts/updater.mjs",
     "upload-assets": "node scripts/upload-assets.mjs",
     "rename-installer": "node scripts/rename-installer.mjs",
+    "cleanup-assets": "node scripts/cleanup-old-assets.mjs",
     "tag": "node scripts/tag.mjs"
   },
   "config": {
