--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Install pnpm
@@ -37,13 +38,22 @@ jobs:
       - name: Get tag annotation
         id: tag_annotation
         run: |
-          $tagMessage = git tag -l --format='%(contents)' ${{ github.ref_name }}
+          # 获取 tag 注释内容
+          $tagMessage = git tag -l --format='%(contents)' ${{ github.ref_name }} | Out-String
+          $tagMessage = $tagMessage.Trim()
+          
+          # 如果没有注释，使用默认文本
           if ([string]::IsNullOrWhiteSpace($tagMessage)) {
             $tagMessage = "See the assets to download and install this version."
+            Write-Host "⚠️  Tag没有注释，使用默认说明"
+          } else {
+            Write-Host "✅ 成功读取Tag注释"
+            Write-Host "内容预览："
+            Write-Host $tagMessage
           }
-          # 保存到文件以支持多行
-          $tagMessage | Out-File -FilePath release-notes.txt -Encoding UTF8
-          echo "has_notes=true" >> $env:GITHUB_OUTPUT
+          
+          # 保存到文件（使用UTF8无BOM编码）
+          [System.IO.File]::WriteAllText("release-notes.txt", $tagMessage, [System.Text.UTF8Encoding]::new($false))
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
