--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,37 +35,13 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Get tag annotation
-        id: tag_annotation
-        run: |
-          # 获取 tag 注释内容（直接重定向到文件，避免编码问题）
-          git tag -l --format='%(contents)' ${{ github.ref_name }} > release-notes-raw.txt
-          
-          # 读取并检查内容
-          $tagMessage = Get-Content release-notes-raw.txt -Raw -Encoding UTF8
-          $tagMessage = if ($tagMessage) { $tagMessage.Trim() } else { "" }
-          
-          # 如果没有注释，使用默认文本
-          if ([string]::IsNullOrWhiteSpace($tagMessage)) {
-            $tagMessage = "See the assets to download and install this version."
-            Write-Host "⚠️  Tag没有注释，使用默认说明"
-          } else {
-            Write-Host "✅ 成功读取Tag注释"
-            Write-Host "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-            Write-Host $tagMessage
-            Write-Host "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          }
-          
-          # 保存到最终文件
-          $tagMessage | Out-File -FilePath release-notes.txt -Encoding UTF8 -NoNewline
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           name: 'snippets-code ${{ github.ref_name }}'
-          body_path: release-notes.txt
+          body: 'See the assets to download and install this version.'
           draft: false
           prerelease: false
           files: ''
