--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,6 +58,7 @@ urlencoding = "2.1.3"
 once_cell = "1.19.0"
 tokio = { version = "1.36.0", features = ["rt", "time"] }
 image = "0.24.7"
+lru = "0.12.5"
 png = "0.17.16"
 fuzzy-matcher = "0.3.7"
 pinyin = "0.10"
