--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -66,6 +66,9 @@ pinyin = "0.10"
 xml-rs = "0.8.25"
 selection = "1.2.0"
 tauri-plugin-clipboard-manager = "2"
+aes-gcm = "0.10"
+sha2 = "0.10"
+hex = "0.4"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
