--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
+    "vue-i18n": "^11.2.2",
     "vue-router": "4",
     "vue-virtual-scroller": "2.0.0-beta.8"
   },
