--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ _tmp*
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 .cursorignore
