feat: :sparkles: 禁用系统默认右击菜单

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -66,6 +66,7 @@ pinyin = "0.10"
 xml-rs = "0.8.25"
 selection = "1.2.0"
 tauri-plugin-clipboard-manager = "2"
+tauri-plugin-prevent-default = "4"
 aes-gcm = "0.10"
 sha2 = "0.10"
 hex = "0.4"
