--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "tesseract.js": "^7.0.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^11.2.2",
