--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,7 +41,12 @@ windows = { version = "0.59", features = [
     "Win32_Storage_FileSystem",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_System_DataExchange",
-    "Win32_System_Memory"
+    "Win32_System_Memory",
+    "Media_Ocr",
+    "Graphics_Imaging",
+    "Storage_Streams",
+    "Foundation",
+    "Foundation_Collections"
 ] }
 log = "0.4"
 mouse_position = "0.1.4"
