--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,15 +38,11 @@ windows = { version = "0.59", features = [
     "Win32_UI_Shell",
     "Win32_System_Com",
     "Win32_Graphics_Gdi",
+    "Win32_Graphics_Dwm",
     "Win32_Storage_FileSystem",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_System_DataExchange",
-    "Win32_System_Memory",
-    "Media_Ocr",
-    "Graphics_Imaging",
-    "Storage_Streams",
-    "Foundation",
-    "Foundation_Collections"
+    "Win32_System_Memory"
 ] }
 log = "0.4"
 mouse_position = "0.1.4"
