--- a/package.json
+++ b/package.json
@@ -73,13 +73,27 @@
     "@tauri-apps/plugin-sql": "^2.2.0",
     "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-updater": "~2.5.1",
+    "@tiptap/core": "^3.17.0",
+    "@tiptap/extension-link": "^3.17.0",
+    "@tiptap/extension-table": "^3.17.0",
+    "@tiptap/extension-table-cell": "^3.17.0",
+    "@tiptap/extension-table-header": "^3.17.0",
+    "@tiptap/extension-table-row": "^3.17.0",
+    "@tiptap/extension-task-item": "^3.17.0",
+    "@tiptap/extension-task-list": "^3.17.0",
+    "@tiptap/extension-typography": "^3.17.1",
+    "@tiptap/pm": "^3.17.0",
+    "@tiptap/starter-kit": "^3.17.0",
+    "@tiptap/vue-3": "^3.17.0",
     "@uiw/codemirror-themes": "^4.23.7",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.1",
+    "marked": "^17.0.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "tesseract.js": "^7.0.0",
+    "turndown": "^7.2.2",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^11.2.2",
@@ -92,6 +106,7 @@
     "@icon-park/vue-next": "^1.4.2",
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.10.2",
+    "@types/turndown": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "@vitejs/plugin-vue": "^5.2.1",
